--- a/exemploR_codigo_fonte_descritiva.Rmd
+++ b/exemploR_codigo_fonte_descritiva.Rmd
@@ -12,6 +12,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 As atividades desenvolvidas usando o software de planilha são reproduzidos aqui utilizando a linguagem R
 
+Inicialmente será utilizada uma versão web do R para aqueles que não tem o software instalado. A aplicação web está disponível no link
+
+[https://cdn.datacamp.com/dcl-react/standalone-example.html](https://cdn.datacamp.com/dcl-react/standalone-example.html)
+
+O código fonte e demais arquivos referentes a esse material  está disponivel em:
+
+[https://github.com/extensaoedu/nivelamento2021primeiro](https://github.com/extensaoedu/nivelamento2021primeiro)
+
+
+
 
 # Medidas descritivas com dados sobre covid no brasil
 
